<resources>
    <string name="app_name">Warefah</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="select_time">select time</string>
    <string name="select_date">select date</string>
    <string name="select_employee_name">Select Employee Name</string>
    <string name="select_location">Select Location</string>
    <string name="select_activity">Select Activity</string>
    <string name="value">Value</string>
    <string name="done">done</string>
    <string name="employee_report">Employee Report</string>
    <string name="location_report">Location Report</string>
    <string name="activity_report">Activity Report</string>
    <string name="employee_location_activity">Employee, Location, Activity</string>
    <string name="enter_employee_productivity">Enter Employee Productivity</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="go">Go</string>
    <string name="add_employee_productivity">Add Employee Productivity</string>
    <string name="import_from_xlsx">Import from .xlsx</string>
    <string name="import_from_xls">import from .xls</string>
    <string name="employees">Employees</string>
    <string name="locations">Locations</string>
    <string name="activities">Activities</string>
</resources>