<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.MainFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/employee_location_activity_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="24dp"
            android:text="@string/employee_location_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/employee_productivity_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/add_employee_productivity"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/employee_report"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/employee_report"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_report"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/location_report"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_report"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/activity_report"/>

    </LinearLayout>
</layout>