<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="employee.location.site.viewmodels.ReportViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.reports.employee.EmployeeReportFilterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_start_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12:31 AM"
                android:text="@{viewModel.startDateTextForEmployeeReport}"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_end_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12-02-2002"
                android:text="@{viewModel.endDateTextForEmployeeReport}"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/select_employee_name_dropdown"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:paddingVertical="16dp"
                android:inputType="none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@={viewModel.selectedEmployeeForEmployeeReport}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/go"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</layout>