<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="employee.location.site.viewmodels.AddProductivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".screens.enterEmployeeProductivity.AddEmployeeProductivityFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12:31 AM"
                android:text="@{viewModel.timeText}"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12-02-2002"
                android:text="@{viewModel.dateText}"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/select_employee_name_dropdown"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:paddingVertical="16dp"
                android:inputType="none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@={viewModel.selectedEmployee}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/select_location_dropdown"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:paddingVertical="16dp"
                android:inputType="none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@={viewModel.selectedLocation}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/select_activity_dropdown"
                android:layout_width="match_parent"
                android:textSize="13sp"
                android:paddingVertical="16dp"
                android:inputType="none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@={viewModel.selectedActivity}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/value"
                android:text="@={viewModel.value}"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="@{() -> viewModel.onDoneClick()}"
            android:text="@string/done"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</layout>